--- a/client/.vscode/extensions.json
+++ b/client/.vscode/extensions.json
@@ -1,13 +1,10 @@
 {
   "recommendations": [
+    "antfu.vite",
     "antfu.iconify",
     "antfu.unocss",
-    "antfu.vite",
     "antfu.goto-alias",
-    "csstools.postcss",
-    "dbaeumer.vscode-eslint",
     "vue.volar",
-    "lokalise.i18n-ally",
-    "streetsidesoftware.code-spell-checker"
+    "dbaeumer.vscode-eslint"
   ]
 }
