--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
     "@iconify-json/carbon": "^1.1.6",
+    "@trpc/client": "^9.26.0",
     "@types/node": "^18.0.3",
     "@unocss/reset": "^0.44.1",
     "@vitejs/plugin-vue": "^3.0.0",
@@ -24,6 +25,7 @@
     "eslint": "^8.19.0",
     "jsdom": "^20.0.0",
     "pnpm": "^7.5.1",
+    "superjson": "^1.9.1",
     "typescript": "^4.7.4",
     "unocss": "^0.44.1",
     "unplugin-auto-import": "^0.9.2",
@@ -31,6 +33,7 @@
     "vite": "^3.0.0",
     "vite-plugin-pages": "^0.25.0",
     "vitest": "^0.18.0",
+    "vue-query": "^1.25.1",
     "vue-tsc": "^0.38.5"
   },
   "eslintConfig": {
