--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Kyle L<https://github.com/kylegl>",
   "license": "MIT",
   "dependencies": {
-    "bumpp": "^8.2.1"
+    "bumpp": "^8.2.1",
+    "superjson": "^1.11.0",
+    "zod": "^3.19.1"
   }
 }
