--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,11 +12,17 @@
   "dependencies": {
     "@prisma/client": "^4.6.1",
     "@trpc/server": "^10.4.1",
-    "fastify": "^4.10.2"
+    "fastify": "^4.10.2",
+    "superjson": "^1.11.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
     "prisma": "^4.6.1",
-    "tsx": "^3.12.1"
+    "tsx": "^3.12.1",
+    "@antfu/eslint-config": "^0.33.0",
+    "eslint": "^8.28.0",
+    "pnpm": "^7.17.1",
+    "typescript": "^4.9.3"
   }
 }
