--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,6 +15,7 @@
     "up": "taze major -I"
   },
   "dependencies": {
+    "@trpc/client": "^10.4.2",
     "@unocss/reset": "^0.47.2",
     "@vueuse/core": "^9.6.0",
     "@vueuse/head": "^1.0.18",
@@ -43,6 +44,7 @@
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-shiki": "^0.7.2",
     "pnpm": "^7.17.1",
+    "@vue-trpc/server": "workspace:*",
     "shiki": "^0.11.1",
     "taze": "^0.8.4",
     "typescript": "^4.9.3",
