--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,14 +2,15 @@
   "name": "@vue-trpc/server",
   "version": "2.0.0",
   "description": "fastify-server",
-  "main": "index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
   "author": "Kyle L<https://github.com/kylegl>",
   "license": "MIT",
+  "keywords": [],
+  "main": "index.ts",
+  "scripts": {
+    "dev": "tsx watch _app.ts"
+  },
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.6.1",
     "@trpc/server": "^10.4.1",
     "fastify": "^4.10.2",
@@ -17,12 +18,12 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
-    "prisma": "^4.6.1",
-    "tsx": "^3.12.1",
     "@antfu/eslint-config": "^0.33.0",
+    "@types/node": "^18.11.9",
     "eslint": "^8.28.0",
     "pnpm": "^7.17.1",
+    "prisma": "^4.6.1",
+    "tsx": "^3.12.1",
     "typescript": "^4.9.3"
   }
 }
